--- a/Todo.html
+++ b/Todo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Todo.css">
 </head>
 <body>
     <div class="container">
@@ -14,6 +14,6 @@
         <ul id="taskList"></ul>
     </div>
 
-    <script src="index.js"></script>
+    <script src="Todo.js"></script>
 </body>
 </html>
